[package]
name = "chdimage"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageparse = { version = "0.1.0", git = "https://github.com/Manorhos/imageparse" }
#imageparse = { version = "0.1.0", path = "../imageparse" }
pyo3 = { version = "0.16", features = ["extension-module", "abi3-py38"] }

[lib]
name = "chdimage"
crate-type = ["cdylib"]
